Resolved issue with gallery spacing.
git-svn-id: https://git.crowdfave.org/svn/crowdfavorite/code/wp-themes/carrington-personal/trunk@38816 546ca710-db30-0410-8887-d9dd8e66aff0

--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -405,7 +405,7 @@ img.wp-smiley {
  -------------------------------------------------- */
 #masthead {
 	min-height: 10px;
-	padding: 6px 0 10px;
+	padding: 11px 0 15px;
 }
 
 
@@ -561,6 +561,7 @@ img.wp-smiley {
 .gallery-thumbs {
 	list-style-type: none;
 	margin: 0;
+	max-width: 720px;
 }
 .gallery-thumbs li {
 	background-color: #ddd;
@@ -981,11 +982,17 @@ img.wp-smiley {
  -------------------------------------------------- */
 .featured {
 	background-color: #666;
-	height: 174px;
+	border-bottom: 10px solid #666;
+	height: 164px;
 	margin: 0 auto;
 	overflow: hidden;
 	position: relative;
 	width: 300px;
+}
+.featured.has-featured-img,
+.featured.featured-format-gallery {
+	border: 0;
+	height: 174px;
 }
 .featured .gallery-img-excerpt li {
 	height: 87px;
@@ -995,8 +1002,6 @@ img.wp-smiley {
 	background-color: #666;
 	color: #fff;
 	display: inline-block;
-	font-size: 18px;
-	line-height: 20px;
 	margin: 0 10px 9px 0;
 	padding: 8px 15px 6px;
 }
@@ -1016,11 +1021,8 @@ img.wp-smiley {
 .featured-description p {
 	margin-top: 0;
 }
-.featured-description, 
-.featured-description p {
-	font-size: 14px;
-	line-height: 20px;
-}
+
+
 /* featured-link, same size as featured box and overlays everything in it */
 .featured-link {
 	bottom: 0;
@@ -1671,16 +1673,23 @@ iPad (landscape) / Screen	1024
 	
 	.featured {
 		float: left;
-		height: 128px;
+		height: 118px;
 		margin-left: 15px;
 		width: 222px;
 	}
-	.featured-title {
-		padding: 6px 13px 4px;		
+	.featured.has-featured-img,
+	.featured.featured-format-gallery {
+		height: 128px;
 	}
-	.featured-description,
-	.featured:hover .featured-description {
-		display: none;
+	.featured-title {
+		font-size: 16px;
+		line-height: 18px;
+		padding: 6px 13px 4px;
+	}
+	.featured-description, 
+	.featured-description p {
+		font-size: 12px;
+		line-height: 17px;
 	}
 	.featured .gallery-img-excerpt li {
 		height: 64px;
@@ -1773,8 +1782,12 @@ iPad (landscape) / Screen	1024
 	}
 	
 	.featured {
-		height: 130px;
+		height: 120px;
 		width: 226px;
+	}
+	.featured.has-featured-img,
+	.featured.featured-format-gallery {
+		height: 130px;
 	}
 	.featured .gallery-img-excerpt li {
 		height: 65px;
@@ -1927,14 +1940,10 @@ iPad (landscape) / Screen	1024
 		padding: 0 0 0 50px;
 	}
 	
-	
 	/* Social form */
 	#social input.social-input,
 	#social .social-select {
 		width: 320px;
-	}
-	#social textarea.social-input {
-		width: 554px;
 	}
 	
 	#social .social-input-row,
@@ -1974,8 +1983,21 @@ iPad (landscape) / Screen	1024
 	}
 	
 	.featured {
-		height: 180px;
+		height: 170px;
 		width: 310px;
+	}
+	.featured.has-featured-img,
+	.featured.featured-format-gallery {
+		height: 180px;
+	}
+	.featured-title {
+		font-size: 18px;
+		line-height: 20px;
+	}
+	.featured-description, 
+	.featured-description p {
+		font-size: 14px;
+		line-height: 20px;
 	}
 	.featured .gallery-img-excerpt li {
 		height: 90px;
