--- a/assets/css/structure.css
+++ b/assets/css/structure.css
@@ -353,14 +353,10 @@ iPad (landscape) / Screen	1024
 		padding: 0 0 0 50px;
 	}
 	
-	
 	/* Social form */
 	#social input.social-input,
 	#social .social-select {
 		width: 320px;
-	}
-	#social textarea.social-input {
-		width: 554px;
 	}
 	
 	#social .social-input-row,
